--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,6 @@ name: django workflow
 on:
     push:
         branches: ["main"]
-    pull_request:
-        branches: ["main"]
 
 jobs:
     build:
@@ -16,7 +14,9 @@ jobs:
               uses: actions/setup-python@v2
               with:
                   python-version: 3.11
+
             - name: Install dependencies
               run: |
                   python -m pip install --upgrade pip
                   pip install -r requirements.txt
+                  node-version: '20'
